zathura: biscuit recolor theme, waybar: workspace and battery indicator and full calendar when hovering, sway: brightness and titlebar tweaks

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -17,3 +17,16 @@ window#waybar {
 #clock.cal {
     margin: 0 20px;
 }
+
+#workspaces button {
+    color: #725A5A;
+}
+
+#workspaces button.focused {
+    color: #FFE9C7;
+}
+
+#battery.charging,
+#battery.full {
+    color: #959A6B;
+}
